--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 
             <img src="img/home-2.jpg" alt="LA Home For Sale">
             <div class="content-box house-info-content">
-              <p>Arroyo Vista at The Woodlands</p>
-              <p>New 3- to 6-Bedroom HomesSq. Ft.: 2102 – 3481</p>
-              <p>#304, Aspen Street, CA 92103</p>
+              <p>Beverly Vallejo, California 95591</p>
+              <p>New 8-Bedroom Homes Sq. Ft.: 2102 – 3481</p>
+              <p>#69 Beverly</p>
             </div>
             <div class="content-box buy-btn-box">
               <a href="products/estatei.html" class="btn-anchor">BUY</a>
