--- a/products/estatei.html
+++ b/products/estatei.html
@@ -62,14 +62,15 @@
 
       </div>
       <div class="price-box">
-        $1,995,000.00
+        $895,000.00
       </div>
       <div class="house-info-box">
-        <span class="house-name">0 TORTUOSO Way - Bel-Air / Holmby Hills, California</span>
+        <span class="house-name">69 Beverly Vallejo, California 95591</span>
         <hr>
         <br>
         <p>
-          Quick access to Los Angeles as well as Ventura. Close to recreation, including hiking,
+          Renovated Kitchen updated bathrooms to include three spacious BONUS Rooms
+          located downstairs. Close to recreation, including hiking,
           biking and equestrian trails.
         </p>
         <br>
@@ -88,7 +89,7 @@
           <br>
           <tr>
             <td>Name:</td>
-            <td>Collins Thomas Igyt</td>
+            <td>Frank Adams</td>
           </tr>
         </table>
 
