--- a/products/estatei.html
+++ b/products/estatei.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>LOS ANGELOUS | Home For Sale</title>
+    <title>Beverly & LA | Home For Sale</title>
     <link rel="stylesheet" href="product.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
