--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
           <!-- WARNING: Cardbox -->
           <div class="cardbox buy-a-home-cardbox">
-            <span class="house-city">Los Angeles</span>
+            <span class="house-city">Beverly Hills</span>
 
             <img src="img/home-2.jpg" alt="LA Home For Sale">
             <div class="content-box house-info-content">
