--- a/products/estatei001.htm
+++ b/products/estatei001.htm
@@ -12,7 +12,7 @@
     <div class="page-container">
       <header>
         <ul class="desktop-header">
-          <li class="btn-buy-a-home"> <a href="/index.html">Buy-a-home</a> </li>
+          <li class="btn-buy-a-home"> <a href="/houseonsale/index.html">Buy-a-home</a> </li>
           <li class="btn-rent-a-home">Rent-a-home</li>
           <li class="btn-contact-us">Contact-us</li>
         </ul>
