--- a/products/estatei.html
+++ b/products/estatei.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>LOS ANGELOUS | Home For Sale</title>
+    <title>Beverly & LA | Home For Sale</title>
     <link rel="stylesheet" href="product.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -27,28 +27,28 @@
       <!-- WARNING: HOUSE -->
       <div class="house-pic-box">
         <div class="box-2 pics-indicator">
-          <img src="img/home-3.jpg" class="img-btn img1-btn " onclick="showHouse1('img/home-3.jpg',)">
-          <img src="img/home-33.jpg"  class="img-btn img2-btn " onclick="showHouse1('img/home-33.jpg')">
-          <img src="img/home-333.jpg"  class="img-btn img3-btn " onclick="showHouse1('img/home-333.jpg')">
-          <img src="img/home-3333.jpg"  class="img-btn img4-btn " onclick="showHouse1('img/home-3333.jpg')">
-          <img src="img/home-33333.jpg"  class="img-btn img5-btn " onclick="showHouse1('img/home-33333.jpg')">
+          <img src="img/home-2.jpg" class="img-btn img1-btn " onclick="showHouse1()">
+          <img src="img/home-22.jpg"  class="img-btn img2-btn " onclick="showHouse2()">
+          <img src="img/home-222.jpg"  class="img-btn img3-btn " onclick="showHouse3()">
+          <img src="img/home-2222.jpg"  class="img-btn img4-btn " onclick="showHouse4()">
+          <img src="img/home-22222.jpg"  class="img-btn img5-btn " onclick="showHouse5()">
         </div>
         <div class="box-2 house-img">
-          <img src="img/home-3.jpg" class="img1 box-img" alt="">
+          <img src="img/home-2.jpg" class="img1 box-img" alt="">
         </div>
         <div class="mobile-pic-indicator-box">
-          <img src="img/home-3.jpg" class="img-btn img1-btn " onclick="showHouse1()">
-          <img src="img/home-33.jpg"  class="img-btn img2-btn " onclick="showHouse2()">
-          <img src="img/home-333.jpg"  class="img-btn img3-btn " onclick="showHouse3()">
-          <img src="img/home-3333.jpg"  class="img-btn img4-btn " onclick="showHouse4()">
-          <img src="img/home-33333.jpg"  class="img-btn img5-btn " onclick="showHouse5()">
+          <img src="img/home-2.jpg" class="img-btn img1-btn " onclick="showHouse1()">
+          <img src="img/home-22.jpg"  class="img-btn img2-btn " onclick="showHouse2()">
+          <img src="img/home-222.jpg"  class="img-btn img3-btn " onclick="showHouse3()">
+          <img src="img/home-2222.jpg"  class="img-btn img4-btn " onclick="showHouse4()">
+          <img src="img/home-22222.jpg"  class="img-btn img5-btn " onclick="showHouse5()">
         </div>
         <br>
 
         <div class="specs-box">
           <span >
             <i class="fa fa-bed"></i>
-            7
+            8
           </span>
           <span >
             <i class="fa fa-shower"></i>
@@ -56,33 +56,28 @@
           </span>
           <span >
             <i class="fa fa-automobile"></i>
-            3
+            5
           </span>
         </div>
 
       </div>
       <div class="price-box">
-        $14,950,000.00
+        $895,000.00
       </div>
       <div class="house-info-box">
-        <span class="house-name">1006 Chantilly Road</span>
+        <span class="house-name">69 Beverly Vallejo, California 95591</span>
         <hr>
         <br>
         <p>
-          Modern architectural masterpiece in prime lower Bel Air.
-          Nestled behind gates in a lush canyon setting, this exquisite contemporary is an
-          entertainer's paradise w/over 10,000 SF of meticulously crafted living space.
-          Enter the dramatic atrium complete w/curved staircase & soaring ceilings &
-          experience an open-concept floor plan w/seamless integration of the indoors &
-          outdoors.
+          Renovated Kitchen updated bathrooms to include three spacious BONUS Rooms
+          located downstairs. Close to recreation, including hiking,
+          biking and equestrian trails.
         </p>
         <br>
         <p>
-          Highlights include a beautifully appointed chef's kitchen w/state of the art Miele
-          appliances & LED lit kitchen countertop made of handblown Canadian glass. The master
-          bedroom rivals the finest hotels, w/walls of glass & sumptuous spa-like bthrm.
-          Entertain w/the 10-seat movie theater, billiard table, 200 bottle wine cellar, a
-          exercise/steam rm.
+          Future 5-acre passive park to include picnic areas and kiosks highlighting
+          significant history of the area.
+          Award-winning school system and state-of-the-art healthcare facilities.
         </p>
 
         <br>
@@ -94,15 +89,11 @@
           <br>
           <tr>
             <td>Name:</td>
-            <td>Timothy Grant</td>
-          </tr>
-          <tr>
-            <td>Email:</td>
-            <td> <a href="mailto:owner@royaldavidson.com">Send A Message</a> </td>
+            <td>Frank Adams</td>
           </tr>
         </table>
 
-        <a href="tel:+1 526 846 8574" class="seller-contact" >Contact Seller</a>
+        <a href="tel:+1 526 846 5872" class="seller-contact" >Contact Seller</a>
       </div>
 
     </div>
